tryingt o fix width issue on mobile

--- a/web/src/components/navbar/navbar.module.css
+++ b/web/src/components/navbar/navbar.module.css
@@ -21,6 +21,11 @@ a {
 
 }
 
+.toggle {
+  display: flex;
+  justify-content: center;
+}
+
 
 .header ul {
   margin: 0;
